chore: Enable CommonStaticAnalysis and update the code